--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -22,15 +22,15 @@
                 <form asp-controller="Home" asp-action="Login" method="post">
                     <div class="row">
                         <div class="col-8 pt-3 pb-2">
-                            <label for="Username" class="form-label">Username</label>
-                            <input type="text" class="form-control" aria-label="Username" name="Username">
+                            <label for="Username" class="form-label">email</label>
+                            <input type="email" class="form-control" aria-label="Username" name="Username">
                         </div>
                         <div class="col-8 pt-3 pb-2">
                             <label for="Contrasena" class="form-label">Contrasena</label>
                             <input type="password" class="form-control" aria-label="Contrasena" name="Contrasena">
                         </div>
                         <div class="col-12 pt-3 pb-2">
-                            <button type="submit" class="btn btn-primary mt-5  mb-5">Guardar Datos</button>
+                            <button type="submit" class="btn btn-primary mt-5  mb-5">Ingresar!</button>
                             <a href="@Url.Action("signUp", "Home")" class="ps-2 ms-3"> ¿No tienes una cuenta?</a>
                         </div>
                     </div>
