--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -200,6 +200,9 @@ h3 {
 
 /*De aqui para abajo estan los estilos de Creador*/
 
+#contenido{
+
+}
 
 .header {
     text-align: center;
@@ -236,7 +239,7 @@ h3 {
 }
 
 .container {
-    max-width: 1000px;
+    max-width: 1500px;
     margin: 0 auto;
     padding: 20px;
 }
@@ -270,7 +273,7 @@ h3 {
 }
 
 #cuerpoContenido {
-    background-color: #1A1E23;
+    margin: 3% 25% 5% 25%;
 }
 
 .container {
@@ -289,10 +292,21 @@ h3 {
     color:white;
 }
 
+.contenedor-imagenes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: normal;
+}
+
+.imagen-publicacion {
+    width: 20%;
+    margin: 10px;
+}
+
 /* De aqui para abajo estan los estilos del popUp creador */
 
 .modal-body, .modal-content {
-    padding: 20px;
+    padding: 3px;
     background-color: #19191A;
     color: white;
 }
@@ -359,4 +373,18 @@ h3 {
     position: absolute;
     top: 29%;
     left: 71%;
+}
+
+.modal-dialog {
+    max-width: 90%; /* Ajustar el ancho máximo del modal */
+}
+
+.modal-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.product-image {
+    width: 16%;
+    margin: 10px;
 }
